# sd-hw-reactive

./: Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/catlog/: mod.rs  server.rs  service_context.rs
src/catlog/db/iface/: connector.rs
src/catlog/entities/: product.rs  user.rs
src/catlog/web/: index.html
src/tests/data/: create_tables.sql  fill_db.sql
