[package]
name = "hw4-reactive"
version = "0.1.0"
edition = "2021"

[lib]
name = "catlog"
path = "src/catlog/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
tokio-postgres = "0.7.8"
hyper = { version = "0.14.14", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
async-trait = "0.1.68"
log = "0.4.17"
simple_logger = "4.1.0"